2001-06-18  Sven Wischnowsky  <wischnow@zsh.org>

	* 14951: Src/signals.c, Src/signals.h: rename handler() to
	zhandler() because it's now exported to modules

2001-06-17  Bart Schaefer  <schaefer@zsh.org>

	* Jason Began: 3931 (see cvs.netbsd.org): src/zshconfig.ac: Use
	-fPIC for gcc dynamic linking rather than -fpic.

2001-06-16  Wayne Davison  <wayned@users.sourceforge.net>

	* unposted: Src/utils.c: Revert the mkstemp() change since it was not
	right.  Left zshconfig.ac alone in case someone wants to create a more
	elaborate mkstemp() change.

2001-06-16  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* 14939: zshconfig.ac, Src/utils.c: Some systems with GNU-based
	utilities scream at you for using mktemp() instead of mkstemp().

2001-06-15  Peter Stephenson  <pws@csr.com>

	* 14929: Src/params.c: after 14915, assigning to individual
	positional parameters failed.

2001-06-15  Andrej Borsenkow  <bor@zsh.org>

	* 14931: Src/Modules/tcp.c, Src/Modules/zftp.c: fix length
	calculation in tcp_connect and zftp_open

2001-06-14  Peter Stephenson  <pws@csr.com>

	* 14921: Functions/Zftp/zfinit, Completion/Zsh/Command/_zftp:
	Load tcp module for zftp; autoload zfget_match and zfcd_match
	for _zftp.

	* 14915: Doc/Zsh/builtins.yo, Doc/Zsh/params.yo, Src/builtin.c,
	Src/params.c: special parameters can't have readonly turned off;
	$* and $@ are readonly.

2001-06-13  Sven Wischnowsky  <wischnow@zsh.org>

	* 14903: Src/Zle/complist.c, Src/Zle/zle_tricky.c: fixes for
	display bugs for completion lists (cursor left one line to far
	up or down)

2001-06-13  Peter Stephenson  <pws@csr.com>

	* 14893: Src/signals.c: make handler mod_export because it's
	needed for signal queueing in various modules.  Probably
	sensible to change handler to zhandler too --- not done yet.

2001-06-13  Sven Wischnowsky  <wischnow@zsh.org>

	* 14897 (and Oliver Kiddle: 14862): Completion/Base/Utility/_values,
	Completion/Unix/Command/_mount, Completion/Unix/Type/_dir_list,